Bug 298895 - does not allow "Service" entry to be blank - can't connect
Summary: does not allow "Service" entry to be blank - can't connect
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: DSL (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-27 09:28 UTC by Silviu C.
Modified: 2013-03-29 17:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silviu C. 2012-04-27 09:28:12 UTC
I was trying to configure my PPPoE connection and I just can't make it work. If I leave the "service" entry blank then the form just throws and error "Service" and will not consider the data I have entered as valid.

My ISP needs that "service" entry to be blank, else the connection won't work.

Reproducible: Always

Steps to Reproduce:
1. Open the networkmanager
2. Try to create a DSL PPPOE connection
3. Enter username, password and leave the "service" entry blank. Throws an error.
Actual Results:  
I have no network connection.
Comment 1 Lamarque V. Souza 2012-04-27 13:51:22 UTC
Git commit eb7006a9040d428318019326efdab26810ae880a by Lamarque V. Souza.
Committed on 27/04/2012 at 15:44.
Pushed by lvsouza into branch 'master'.

DSL: do not send empty service field to NetworkManager or it will not
create the connection.
FIXED-IN: 0.9.0.2

M  +4    -1    backends/NetworkManager/settings/pppoedbus.cpp
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/eb7006a9040d428318019326efdab26810ae880a
Comment 2 Silviu C. 2013-03-29 11:16:58 UTC
Hello,

Is there any chance that a patch can be provided for 0.9.0.1?

Kbuntu LTS ships with KDE 4.8.5 and version 0.9.0.1 of the applet so the fix in 0.9.0.2 does not get integrated in the re-spins of the ISO images. Sure, they provide updated packages in their backports ppa for KDE but if I can't connect that does not do me very much good :(
Comment 3 Lamarque V. Souza 2013-03-29 17:21:58 UTC
Sorry, but that is not possible. There is only one branch for the entire 0.9.0.x series. If you already have a valid connection, which does not require secrets or is configured as system connection you can activate it using the following command line:

nmcli connection up id "<connection name>"
Comment 4 Silviu C. 2013-03-29 17:28:58 UTC
Ok, thanks for your reply.

The workaround I've used was to put something in the service field and then erase it from the relevant file in /etc/NetworkManager/system-connections/