DSL: do not send empty service field to NetworkManager or it will not create the connection.

BUG: 298895
FIXED-IN: 0.9.0.2